@@ -1,3 +1,12 @@
+ukui-search (0.4.1+0901) v100; urgency=medium
+
+  * Bug 无
+  * 任务号:无
+  * 其他改动：
+  * 文件搜索线程改为1个。
+
+ -- zhangpengfei <zhangpengfei@kylinos.cn>  Wed, 01 Sep 2021 17:30:04 +0800
+
 ukui-search (0.4.0+0824) v100; urgency=medium
 
   * Bug 无
